# emboss

./: Cargo.toml  build.rs
examples/: simple.rs
src/: components.rs  input.rs  lib.rs  main.rs  ncurses.rs  point.rs  rect.rs  timer.rs
src/turm/: ansi.rs  average.rs  canvas.rs  grid.rs  libc_util.rs  mod.rs  renderers.rs  rowcol.rs  texel.rs
