[package]
name = "crss"
version = "0.1.0"
authors = ["russley"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.70"
tokio = { version = "0.2", features = ["full"] }
rand = "0.7.3"

[build-dependencies]
bindgen = "0.54.0"